add: styling, content, legal stuff

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,9 +4,9 @@ title = 'Patrimoine | Saint-Romans'
 theme = 'ananke'
 defaultContentLanguage = 'fr'
 featured_image = 'assets/images/saint-romans.jpg'
-[params]
-	subtitle = "Découvrez l'histoire de Saint-Romans, racontée par ses habitants"
 
+[params]
+custom_css = ["custom.scss"]
 read_more_copy = "Lire"
 date_format = "2 January 2006"
 site_logo = "images/logo-saint-romans.png"
